--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ axum = "0.8.1"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 tokio = { version = "1.43.0", features = ["full"] }
+tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 void = "1.0.2"
