--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,17 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.95"
+async-stream = "0.3.6"
 aws-config = "1.5.16"
 aws-sdk-bedrockruntime = "1.73.0"
 axum = "0.8.1"
+futures = "0.3.31"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
+thiserror = "2.0.11"
 tokio = { version = "1.43.0", features = ["full"] }
+tokio-stream = "0.1.17"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+uuid = { version = "1.13.1", features = ["v4"] }
 void = "1.0.2"
