--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ async-stream = "0.3.6"
 aws-config = "1.5.16"
 aws-sdk-bedrockruntime = "1.73.0"
 axum = "0.8.1"
+either = "1.13.0"
 futures = "0.3.31"
+itertools = "0.14.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 thiserror = "2.0.11"
