--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ tokio-stream = "0.1.17"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 uuid = { version = "1.13.1", features = ["v4"] }
+chrono = "0.4.31"
 void = "1.0.2"
