--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ tracing-subscriber = "0.3.19"
 uuid = { version = "1.13.1", features = ["v4"] }
 chrono = "0.4.31"
 void = "1.0.2"
+async-trait = "0.1.86"
